# mcp-server-metabase

./: .env.example  .gitignore  CRITICAL_SECURITY_ADVISORY.md  DEPLOYED.md  PENETRATION_TEST_REPORT.md  Procfile  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_DEPLOYMENT_SUMMARY.md  SECURITY_FIX_VERIFICATION.md  app.json  pyproject.toml  requirements.txt  test_auth.py  test_security_enhancements.py
src/forestadmin_metabase_mcp/: __init__.py  metabase_client.py  server_sse.py  tools.py
