[project]
name = "forestadmin-metabase-mcp-server"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "sse-starlette>=2.0.0"
]

[project.scripts]
forestadmin-metabase-mcp = "forestadmin_metabase_mcp.server_sse:main"
